# fb-lead-gen

./: .env.example  .gitignore  .gitmodules  README.md  SETUP-GUIDE.md  configure.sh  docker-compose.yml  install-agent.sh  one-click-setup.sh  register-openclaw.sh  setup.sh  start.sh  upgrade.sh  使用说明书.md
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/adapters/: base.py
backend/app/routers/: analytics.py  auth.py  campaigns.py  conversations.py  leads.py  messages.py  persona.py  personas.py  settings.py  templates.py
backend/app/services/: ai_engine.py  ai_service.py  auth_service.py  browser_lock.py  campaign_runner.py  csv_import.py  data_sources.py  facebook.py  reply_service.py  telegram.py  whatsapp.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts.bak
mcp-server/: auto_poller.py  browser_agent.py  browser_agent_opencli.py  conversation_engine.py  http_api.py  openclaw-config.json  persona.example.json  requirements.txt  server.py
sidecar/: db.py  jsonrpc.py  main.py  pyproject.toml  requirements.txt
sidecar/adapters/: base.py  facebook.py
sidecar/services/: ai_service.py  campaign_runner.py  message_monitor.py  notifier.py
sidecar/tests/: test_db.py  test_rpc.py
tauri/: .gitignore  package-lock.json  package.json
tauri/src/: App.tsx  index.css  main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: make_icons.py
tauri/src-tauri/src/: ipc.rs  main.rs
(+59 files in other folders)
